@@ -11,6 +11,7 @@ cnb000573607.mrc
 cnb000576456.mrc
 cnb000641953.mrc - Special format of series ordinal (490 field).
                    Titles of separate works (505 field).
+cnb000750575.xml - Field 700 with t subfield.
 cnb000750997.mrc
 cnb000754547.mrc
 cnb000974260.mrc - Has sine loco as publication place.
